[package]
name = "wisp"
version = "0.1.0"
authors = ["kixelated <kixelated@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libc = "0.2"
io-uring = { version = "0.4", features = [ "unstable" ] }
slab = "0.4"
nix = "0.19"
enum_dispatch = "0.3"
